--- a/index.html
+++ b/index.html
@@ -30,6 +30,106 @@
 				Hey! My name is Ruud Linssen and I am an <b>Information Security Technology</b> student at the <b>Eindhoven University of Technology.</b>
 			</p>
 
+            <div class="interest-icon-container">
+
+                <!-- Interests -->
+                <div class="interest-icon-section">
+                    <h3>Interests</h3>
+                    <div class="interest-icons-wrapper">
+                        <div class="interest-icon">
+                            <i class="fas fa-shield-alt"></i>
+                            <small>Cyber security</small>
+                        </div>
+                        <div class="interest-icon">
+                            <i class="fas fa-network-wired"></i>
+                            <small>Networks</small>
+                        </div>
+                        <div class="interest-icon">
+                            <i class="fas fa-chart-pie"></i>
+                            <small>Data analysis</small>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Development -->
+                <div class="interest-icon-section">
+                    <h3>Development</h3>
+                    <div class="interest-icons-wrapper">
+                        <div class="interest-icon">
+                            <i class="fab fa-python"></i>
+                            <small>Python</small>
+                        </div>
+                        <div class="interest-icon">
+                            <i class="fas fa-database"></i>
+                            <small>Databases</small>
+                        </div>
+                        <div class="interest-icon">
+                            <i class="fas fa-globe"></i>
+                            <small>Web</small>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Leisure -->
+                <div class="interest-icon-section">
+                    <h3>When I relax</h3>
+                    <div class="interest-icons-wrapper">
+                        <div class="interest-icon">
+                            <i class="fas fa-flag"></i>
+                            <small>CTF</small>
+                        </div>
+                        <div class="interest-icon">
+                            <i class="fas fa-tv"></i>
+                            <small>Shows & Movies</small>
+                        </div>
+                        <div class="interest-icon">
+                            <i class="fas fa-gamepad"></i>
+                            <small>Games</small>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Operating Systems -->
+                <div class="interest-icon-section">
+                    <h3>Operating systems</h3>
+                    <div class="interest-icons-wrapper">
+                        <div class="interest-icon">
+                            <i class="fab fa-linux"></i>
+                            <small>Linux</small>
+                        </div>
+                        <div class="interest-icon">
+                            <i class="fab fa-windows"></i>
+                            <small>Windows</small>
+                        </div>
+                        <div class="interest-icon">
+                            <i class="fab fa-android"></i>
+                            <small>Android</small>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- <div class="interest-icon"> -->
+                <!--     <i class="fas fa-shield-alt"></i> -->
+                <!--     <small>Cyber security</small> -->
+                <!-- </div> -->
+                <!-- <div class="interest-icon"> -->
+                <!--     <i class="fab fa-python"></i> -->
+                <!--     <small>Python</small> -->
+                <!-- </div> -->
+                <!-- <div class="interest-icon"> -->
+                <!--     <i class="fas fa-database"></i> -->
+                <!--     <small>Databases</small> -->
+                <!-- </div> -->
+                <!-- <div class="interest-icon"> -->
+                <!--     <i class="fas fa-chart-pie"></i> -->
+                <!--     <small>Analysis</small> -->
+                <!-- </div> -->
+                <!-- <div class="interest-icon"> -->
+                <!--     <i class="fas fa-tv"></i> -->
+                <!--     <small>TV Shows</small> -->
+                <!-- </div> -->
+            </div>
+
 			<h2>Education</h2>
 
 			<p>
@@ -58,6 +158,7 @@
 
 			</p>
 
+
 			<h2>Contact</h2>
 
 			<p>
@@ -66,6 +167,8 @@
 				I am also on <i class="fab fa-github-alt"></i> <a target="_blank" href="https://github.com/ruudjelinssen">GitHub</a> and <i target="_blank" class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/ruud-linssen/">LinkedIn</a>.
 
 			</p>
+
+
 		</div>
 
 		<script type="text/javascript">
