--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 			<p>
 				You can send an email to <i class="fas fa-envelope"></i> <span class="yellow" id='email'>*************@*****.***</span> (GPG key: <a href="RuudLinssen0x11C7CAE9pub.asc">6749 5CC5 5C54 11C7 CAE9</a>).
 
-				I am also on <i class="fab fa-github-alt"></i> <a target="_blank" href="https://github.com/ruudjelinssen">GitHub</a> and <i target="_blank" class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/ruud-linssen/">LinkedIn</a>.
+				I am also on <i class="fab fa-github-alt"></i> <a target="_blank" href="https://github.com/ruudjelinssen">GitHub</a>, <i target="_blank" class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/ruud-linssen/">LinkedIn</a> and <i target="_blank" class="fab fa-twitter"></i> <a href="https://twitter.com/Stumpje">Twitter</a>.
 
 			</p>
 
