Reduced font and added foresics icon

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
                             <small>Networks</small>
                         </div>
                         <div class="interest-icon">
+                            <i class="fas fa-fingerprint"></i>
+                            <small>Forensics</small>
+                        </div>
+                        <div class="interest-icon">
                             <i class="fas fa-chart-pie"></i>
                             <small>Data analysis</small>
                         </div>
