--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 			<h1>About me</h1>
 			<p>
-				Hey! My name is Ruud Linssen and I am an <b>Information Security Technology</b> student at the <b>Eindhoven University of Technology.</b>
+				Hey! I'm Ruud Linssen and I've recently finished my master's in cyber security at the <b>Eindhoven University of Technology</b>.
 			</p>
 
 
@@ -40,7 +40,7 @@
 
 					<li>Eindhoven University of Technology<br>
 						Information Security Technology<br>
-						2018 &mdash; now<br>
+						2018 &mdash; 2020<br>
 						<small>
 							Master in Cyber Security at the Eindhoven University of Technology with some courses at the Radboud University Nijmegen. Also known as TRU/e master in Cyber Security.<br>
 							<a href="https://true-security.nl/">more info</a>
@@ -75,8 +75,8 @@
 
 		<script type="text/javascript">
 			// Insert email using JS to prevent bots from finding it.
-			var domain = 'gmail.com';
-			var username = 'r.p.j.linssen';
+			var domain = 'protonmail.com';
+			var username = 'ruudlinssen';
 			document.getElementById('email').innerHTML = username + '@' + domain;
 		</script>
 
